# caffe2-hs

./: .gitignore  .gitmodules  stack.yaml
caffe2/: package.yaml
caffe2-cpp/: CMakeLists.txt  Makefile  README.md  Setup.hs  package.yaml
caffe2-cpp/src/Caffe2/: Cpp.hs
caffe2-generator/: README.md  package.yaml
caffe2-generator/app/: Main.hs
caffe2-generator/src/Caffe2/: Generator.hs
caffe2-proto/: package.yaml  proto
caffe2/src/: Main.hs
caffe2/src/Caffe2/: Util.hs
tools/: build_caffe2_on_macos.sh  unload_extlib_submodules.sh
